Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14278

Can't remove breakpoint in Disassembler

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 3.5.0-rc1
    • Qt Creator 3.4.0
    • Debugger
    • None
    • Ubuntu 14.10 64 bit

      Windows 7 64 bit
      MinGW 4.9.1
      gdb 7.8
    • d765cd73a2292ccad36837aca696808b5d2cdacd

    Description

      1. Open a project.
      2. Set a breakpoint in main function.
      3. Start the debugger and let it stop at the breakpoint.
      4. Click on the "Operate by Instruction" icon to open the Disassembler.
      5. Try to remove the breakpoint in the Disassembler.
        It's not possible. Clicking it adds another breakpoint in the same location. The context menu does not offer an option to remove the initial breakpoint.

      Clicking the breakpoint should remove it just like in the C++-editor.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTCREATORBUG-14278
          # Subject Branch Project Status CR V

          Activity

            People

              hjk hjk
              rlohning Robert Löhning
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes