src/plugins/debugger/disassemblerlines.h
@@ -53,9 +53,6 @@ public:
     QString toString(int maxOp = 0) const;
     void fromString(const QString &unparsed);
 
-    // Return address of an assembly line "0x0dfd  bla".
-    static quint64 addressFromDisassemblyLine(const QString &line);
-
 public:
     quint64 address;  // (ass) Address of instruction in memory/in binary.
     QString function; // (ass) Function to which current instruction belongs.
